--- a/src/assets/scss/_tracker-view.scss
+++ b/src/assets/scss/_tracker-view.scss
@@ -3,8 +3,7 @@
   &__card {
     display: inline-block;
     margin: 10px;
-    max-width: calc(100vw - 220px);
-    min-width: 350px;
+    width: calc(100vw - 220px);
     background: white;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 
