--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
@@ -21,37 +21,75 @@
   </div>
 
   <div class="entity-view__navigation">
-    <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 0" (click)="selectedIndex = 0">GENERAL DETAILS</span>
-    <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 1" (click)="selectedIndex = 1">PREVIEW</span>
+    <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 0" (click)="setIndex(0)">GENERAL DETAILS</span>
+    <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 1" (click)="setIndex(1)">PREVIEW</span>
   </div>
 
   <md-tab-group [(selectedIndex)]="selectedIndex">
     <md-tab>
 
-      <div class="entity-view__card">
+      <div class="entity-view__card entity-view__card--large">
         <div class="entity-view__card__header">
           <div class="entity-view__card__header__title">SMTP Details</div>
           <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
           <md-menu #editOptions="mdMenu" x-position="before">
-            <button *ngIf="!addMode" md-menu-item (click)="editMode = true;"> Edit Email Template Details</button>
+            <button *ngIf="!addMode" md-menu-item (click)="enableEditMode()"> Edit Email Template Details</button>
           </md-menu>
         </div>
 
-        <form class="entity-view__card__content" #smtpInputForm="ngForm">
-          <md-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
-            <input required md-input [disabled]="!editMode && !addMode" placeholder="Name" [(ngModel)]="entity.name" name="name" type="text">
+        <div class="entity-view__card__content">
+          <md-input-container class="entity-view__card__content__item email-template-view__input">
+            <input required md-input [disabled]="!editMode && !addMode" placeholder="Name" [(ngModel)]="entity.name" type="text">
           </md-input-container>
-        </form>
+
+          <dropdown-component class="email-template-view__dropdown"
+                              [showPlaceholder]="true"
+                              [disabled]="!editMode && !addMode"
+                              [options]="types"
+                              [selected]="entity.type"
+                              [placeholder]="'Template Type'"
+                              (onSelect)="entity.type = $event">
+          </dropdown-component>
+
+          <dropdown-component class="email-template-view__dropdown"
+                              [showPlaceholder]="true"
+                              [disabled]="!editMode && !addMode"
+                              [options]="smtpProviderService.entities$ | async"
+                              [mapper]="smtpProviderMapper"
+                              [selected]="entity.smtpProvider"
+                              [placeholder]="'SMTP Provider'"
+                              (onSelect)="entity.smtpProvider = $event">
+          </dropdown-component>
+
+          <md-input-container class="entity-view__card__content__item">
+            <input required md-input [disabled]="!editMode && !addMode" placeholder="Subject" [(ngModel)]="entity.subject" type="text">
+          </md-input-container>
+
+          <div id="editor-id"></div>
+        </div>
+
         <div *ngIf="editMode || addMode" class="entity-view__card__actions">
           <div *ngIf="editMode" (click)="cancelEdit()">CANCEL</div>
-          <div (click)="saveTemplate(smtpInputForm.form.valid)">SAVE</div>
+          <div (click)="saveTemplate()">SAVE</div>
         </div>
       </div>
 
     </md-tab>
 
     <md-tab>
-      <coming-soon [inPage]="true"></coming-soon>
+      <div class="entity-view__card entity-view__card--large">
+        <div class="entity-view__card__header">
+          <div>
+            <div class="entity-view__card__header__title">Email Template Preview</div>
+            <div class="entity-view__card__header__subtitle">preview how the template will look in an email</div>
+          </div>
+          <md-icon>more_vert</md-icon>
+        </div>
+
+        <div class="entity-view__card__content">
+          <div class="email-template-view__preview__body" [innerHTML]="entity.body"></div>
+        </div>
+      </div>
     </md-tab>
   </md-tab-group>
 </div>
