--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.scss
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.scss
@@ -22,4 +22,26 @@
       margin-bottom: 60px;
     }
   }
+
+  &__body {
+    min-height: 200px;
+    border: 1px solid rgba(0,0,0,0.2);
+    padding: 5px;
+  }
+
+  &__label {
+    margin-bottom: 3px;
+    margin-top: 6px;
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.4);
+  }
+}
+
+.editor-container {
+  height: auto;
+
+  &--hidden {
+    overflow: hidden;
+    height: 0;
+  }
 }
