--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
@@ -30,7 +30,7 @@
 
       <div class="entity-view__card entity-view__card--large">
         <div class="entity-view__card__header">
-          <div class="entity-view__card__header__title">SMTP Details</div>
+          <div class="entity-view__card__header__title">Email Template Details</div>
           <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
           <md-menu #editOptions="mdMenu" x-position="before">
             <button *ngIf="!addMode" md-menu-item (click)="enableEditMode()"> Edit Email Template Details</button>
