--- a/src/app/pages/campaigns-page/campaign-view/campaign-view.component.scss
+++ b/src/app/pages/campaigns-page/campaign-view/campaign-view.component.scss
@@ -1,7 +1,15 @@
 .campaign-view {
-  margin: 25px;
 
-  div {
-    margin-top: 15px;
+  &__email-templates {
+    flex-basis: 100%;
   }
+
+  &__card {
+    min-width: 320px;
+  }
+
+  &__dropdown {
+    margin-top: 10px;
+  }
+
 }
