--- a/src/app/reports/components/report-table/report-table.component.html
+++ b/src/app/reports/components/report-table/report-table.component.html
@@ -35,7 +35,7 @@
       </thead>
 
       <tbody>
-        <tr *ngFor="let d of data | filterEntities: filterString | sortEntities: sortParams.mappingFunction: sortParams.sortOrder">
+        <tr *ngFor="let d of data | filterEntitiesByParams: columnParams: filterString | sortEntities: sortParams.mappingFunction: sortParams.sortOrder">
           <td *ngFor="let params of columnParams" [class.cell--align-right]="params.align === 'right'" (click)="cellClicked(params, d)" [class.filter-cell]="params.isFilter">{{params.mappingFunction(d)}}</td>
         </tr>
       </tbody>
